# LocalEGA-distribution

./: .gitmodules  README.md
db/: 10-init.sql  50-views.sql  51-file-system-functions.sql  52-nss.sql  53-nss-triggers.sql  60-grants.sql  README.md  pg-build.conf
docs/: conf.py  index.rst
src/: README.md
src/crypt4gh-fs/: .gitignore  Makefile.in  README.md  cache.c  configure.ac  db.c  db.h  debug.h  fs.c  fs.conf.sample  fs.h  log.h  main.c  pool.h  readconf.c  readconf.h
src/db/: 10-init.sql  49-private.sql  50-views.sql  52-nss.sql  53-nss-triggers.sql  55-sqlite-fs.sql  60-grants.sql
src/fuse/: .depend  .gitignore  Makefile.in  cache.h  fs.conf.sample  includes.h  pool.c
src/nss/: Makefile  README.md  nss.c
src/openssh/: README.md  ega-sshd.service  sshd_config.sample
src/openssh/patches/: ega.patch  systemd-readyness.patch
src/pam/: Makefile  README.md  pam.ega
src/pam/pam_ega_auth/: Makefile  pam.c  utils.h
src/pam/pam_ega_homedir/: Makefile  pam.c
src/pam/pam_ega_localnss/: Makefile  pam.c
src/pam/pam_ega_mount/: Makefile  pam.c
